<resources>
    <string name="app_name">CeritaLu App</string>
    <string name="title_splash">logo_splash</string>
    <string name="title_landing">Hiii.. \nWelcome to CeritaLu</string>
    <string name="landing_description">welcome image</string>
    <string name="desc_landing">Share your moment to another people :D \nAnd spread happines to each others</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_title">Login and share your moments</string>
    <string name="login_desc">with this app you can see others stories</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login_image_desc">Login page image</string>
    <string name="register_image_desc">Register page image</string>
    <string name="name">your name</string>
    <string name="register_title">Register your account</string>
    <string name="register_confirmation">Do you already have an account?</string>
    <string name="login_confirmation">Didn\'t have any account?</string>
    <string name="validate_email">enter a valid email!</string>
    <string name="validate_password">don\'t less than 8 character!</string>
    <string name="register_success">Register Success!</string>
    <string name="stories_image">Stories Image</string>
    <string name="stories_icon">App Icon</string>
    <string name="user_name">User Name</string>
    <string name="detail_instruction">tap image for details</string>
    <string name="upload_story">upload your story</string>
    <string name="log_out">Log out</string>
    <string name="language">Language</string>
    <string name="setting">setting</string>
    <string name="image_preview">image preview</string>
    <string name="choose_from_gallery">From Gallery</string>
    <string name="choose_from_camera">Open Camera</string>
    <string name="describe_your_image">Describe your image</string>
    <string name="post">Post</string>
    <string name="empty_image_warning">No Image Selected :( </string>
    <string name="post_activity_title">Share your story</string>
    <string name="a_story_from">a story from :</string>
    <string name="user">user</string>
    <string name="content_description">content description</string>
    <string name="empty_warning">this field must not be empty</string>
    <string name="welcome">Welcome,</string>
    <string name="detail_bar">Story by</string>
    <string name="maps">maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="share_location">Share your location</string>
    <string name="permission_granted">Access permitted</string>
    <string name="permission_denied">Allow Access first</string>
    <string name="created_city">City -</string>
    <string name="created_at">--:--</string>
    <string name="coba_lagi">Try Again</string>
    <string name="map_loaded">Load Location Success</string>
    <string name="map_loading">Loading…</string>
    <string name="failed_getLocation">Failed get Location</string>
    <string name="failed_getMap">Failed get Map</string>
    <string name="map_toDetail">Tap to see their story</string>


</resources>