<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/darkgrey"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/iv_gambar"
                android:layout_width="376dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_preview"
                android:src="@drawable/ic_imageupload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/stories_icon"
            android:src="@drawable/cerita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/title_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/a_story_from"
            android:textColor="@color/lightblu"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_icon" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/user"
            app:layout_constraintBottom_toBottomOf="@+id/title_from"
            app:layout_constraintStart_toEndOf="@+id/title_from"
            app:layout_constraintTop_toTopOf="@+id/title_from" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_description_detail"
            android:padding="16dp"
            android:text="@string/content_description"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <ProgressBar
            android:id="@+id/pb_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminateTint="@color/darkblu"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView"
            app:layout_constraintStart_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="@+id/materialCardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>