<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.story.PostStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/darkgrey"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/iv_gambar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_preview"
                android:src="@drawable/ic_imageupload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_openGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/lightblu"
            android:text="@string/choose_from_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView" />

        <Button
            android:id="@+id/btn_openCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/darkblu"
            android:text="@string/choose_from_camera"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintStart_toStartOf="@+id/materialCardView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/describe_your_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <com.dicoding.mystorysubmission.ui.customView.CustomEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_normal"
                android:ems="10"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_postStory"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/lightblu"
            android:text="@string/post"
            app:layout_constraintEnd_toEndOf="@+id/tl_description"
            app:layout_constraintStart_toStartOf="@+id/tl_description"
            app:layout_constraintTop_toBottomOf="@+id/tl_description" />

        <ProgressBar
            android:id="@+id/pb_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_postStory"
            app:layout_constraintEnd_toEndOf="@+id/btn_postStory"
            app:layout_constraintStart_toStartOf="@+id/btn_postStory"
            app:layout_constraintTop_toTopOf="@+id/btn_postStory" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>